[refactor] Replace Paths.get calls with Path.of
Use the OpenRewrite migration output to adopt Path.of consistently in files that only received the mechanical path factory rewrite.