@@ -31,7 +31,6 @@ import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Properties;
 
 
@@ -48,7 +47,7 @@ public class FileSystemWriter implements BackupWriter {
     private boolean dataWritten = false;
 
     public FileSystemWriter(final String path) throws IOException {
-        this(Paths.get(path));
+        this(Path.of(path));
     }
 
     public FileSystemWriter(final Path file) throws IOException {
