@@ -34,7 +34,6 @@ import org.junit.Test;
 
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static org.junit.Assert.*;
 
@@ -42,7 +41,7 @@ public class LazyCacheTest {
 
     private static Path getLazyConfig() {
         try {
-            return Paths.get(LazyCacheTest.class.getResource("/lazy-cache-conf.xml").toURI());
+            return Path.of(LazyCacheTest.class.getResource("/lazy-cache-conf.xml").toURI());
         } catch (final URISyntaxException e) {
             throw new IllegalStateException("Unable to find: lazy-cache-conf.xml");
         }
